--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,9 +14,14 @@ depend:
 commands:
   dmsg:
     description: ""
+  rmsg:
+    description: ""
 
 permissions:
   betterchat:
     detelemessage:
       default: op
       description: Allow delete messages
+    viewmessagereports:
+      default: op
+      description: Allow view reports
