--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compileOnly 'fr.xephi:authme:5.6.0-SNAPSHOT'
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.0.0-SNAPSHOT'
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.6-4'
+    implementation group: 'club.minnced', name: 'discord-webhooks', version: '0.8.2'
+
 }
 
 group = 'Hikko'
@@ -67,6 +69,7 @@ jar {
 	from {
 		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 	}
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 task copyJar(type: Copy) {
